add testing, modification to pom.xml, some changes in front end